v0.4.0:
  data: 2012-12-xx
  changes:
    - Conversion to grunt v0.4 conventions.
    - Replace basePath with cwd
v0.3.2:
  date: 2012-10-18
  changes:
    - Pass copyOptions on single file copy
v0.3.1:
  date: 2012-10-12
  changes:
    - Rename grunt-contrib-lib dep to grunt-lib-contrib.
v0.3.0:
  date: 2012-09-24
  changes:
    - General cleanup and consolidation.
    - Global options depreciated.
v0.2.4:
  date: 2012-09-18
  changes:
    - No valid source check.
v0.2.3:
  date: 2012-09-17
  changes:
    - Path.sep fallback for node <= 0.7.9.
v0.2.2:
  date: 2012-09-17
  changes:
    - Single file copy support.
    - Test refactoring.
v0.2.0:
  date: 2012-09-07
  changes:
    - Refactored from grunt-contrib into individual repo.