@@ -2,11 +2,12 @@ v0.4.0:
   data: 2012-12-xx
   changes:
     - Conversion to grunt v0.4 conventions.
-    - Replace basePath with cwd
+    - Replace basePath with cwd.
+    - Empty directory support.
 v0.3.2:
   date: 2012-10-18
   changes:
-    - Pass copyOptions on single file copy
+    - Pass copyOptions on single file copy.
 v0.3.1:
   date: 2012-10-12
   changes:
